[gd_scene load_steps=64 format=2]

[ext_resource path="res://Sprites/Link_intro2.png" type="Texture" id=1]
[ext_resource path="res://Sprites/trifuerzagif.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Link_intro1.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Render.png" type="Texture" id=4]
[ext_resource path="res://Actor1.gd" type="Script" id=5]
[ext_resource path="res://Fuentes/KGBlankSpaceSolid.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://Sonidos/Musica/intro musica.mp3" type="AudioStream" id=7]
[ext_resource path="res://Fuentes/MinecraftRegular-Bmg3.otf" type="DynamicFontData" id=8]
[ext_resource path="res://Scripts/Botton.gd" type="Script" id=9]
[ext_resource path="res://Sonidos/SFX/Untitled_Project_V1.mp3" type="AudioStream" id=10]
[ext_resource path="res://Fuentes/RGB boton.tres" type="Animation" id=11]
[ext_resource path="res://Escenas/startbuttonasdfarsdfgbsf.gd" type="Script" id=12]

[sub_resource type="RectangleShape2D" id=17]
extents = Vector2( 73, 136.875 )

[sub_resource type="Animation" id=50]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("../Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AudioStreamPlayer:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = false
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}

[sub_resource type="Animation" id=51]
resource_name = "camiar"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AudioStreamPlayer:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ true, false, true, false ]
}

[sub_resource type="AtlasTexture" id=52]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 48, 64 )

[sub_resource type="AtlasTexture" id=53]
atlas = ExtResource( 3 )
region = Rect2( 48, 0, 48, 64 )

[sub_resource type="AtlasTexture" id=54]
atlas = ExtResource( 3 )
region = Rect2( 96, 0, 48, 64 )

[sub_resource type="AtlasTexture" id=55]
atlas = ExtResource( 3 )
region = Rect2( 144, 0, 48, 64 )

[sub_resource type="AtlasTexture" id=56]
atlas = ExtResource( 3 )
region = Rect2( 192, 0, 48, 64 )

[sub_resource type="SpriteFrames" id=9]
animations = [ {
"frames": [ SubResource( 52 ), SubResource( 53 ), SubResource( 54 ), SubResource( 55 ), SubResource( 56 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 15, 45.5 )

[sub_resource type="RectangleShape2D" id=18]

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 7, 79 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 2 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 2 )
region = Rect2( 0, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 2 )
region = Rect2( 32, 32, 32, 32 )

[sub_resource type="SpriteFrames" id=16]
animations = [ {
"frames": [ SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 48, 64 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 1 )
region = Rect2( 0, 64, 48, 64 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 1 )
region = Rect2( 0, 128, 48, 64 )

[sub_resource type="SpriteFrames" id=22]
animations = [ {
"frames": [ SubResource( 19 ), SubResource( 20 ), SubResource( 21 ) ],
"loop": false,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 1 )
region = Rect2( 0, 64, 48, 64 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 1 )
region = Rect2( 0, 128, 48, 64 )

[sub_resource type="SpriteFrames" id=25]
animations = [ {
"frames": [ SubResource( 23 ), SubResource( 24 ) ],
"loop": true,
"name": "default",
"speed": 3.0
} ]

[sub_resource type="Animation" id=26]
resource_name = "Disolve"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = false
tracks/1/keys = {
"times": PoolRealArray( -0.00653804, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 3, 0 ), Vector2( 3, 0 ) ]
}

[sub_resource type="Animation" id=27]
resource_name = "RESET"
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 3, 0 ) ]
}

[sub_resource type="Animation" id=31]
resource_name = "salir"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="DynamicFont" id=28]
outline_size = 9
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 6 )

[sub_resource type="Animation" id=29]
resource_name = "Aparicion"
tracks/0/type = "value"
tracks/0/path = NodePath(".:custom_fonts/font:size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.990776 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 16, 48 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rect_rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.990512 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -360.0, 360.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:rect_scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = false
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.5, 0.5 ), Vector2( 3, 3 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath(".:rect_position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 188, 214 ), Vector2( 193, 38 ) ]
}

[sub_resource type="Animation" id=30]
resource_name = "RESET"
tracks/0/type = "value"
tracks/0/path = NodePath(".:custom_fonts/font:size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 16 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rect_rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:rect_scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath(".:rect_position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 188, 214 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("../AudioStreamPlayer:volume_db")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -80.0 ]
}

[sub_resource type="Animation" id=43]
resource_name = "musica"
tracks/0/type = "value"
tracks/0/path = NodePath("../AudioStreamPlayer:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -80.0, 1.0 ]
}

[sub_resource type="Animation" id=32]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=33]
resource_name = "dejar"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.494118 ) ]
}

[sub_resource type="Animation" id=34]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=35]
resource_name = "ayyda"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0.494118 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=40]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:custom_styles/pressed:bg_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0.847059, 0.890196, 0.0862745, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:custom_styles/normal:bg_color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0.878431, 0.0117647, 0.0117647, 1 ) ]
}

[sub_resource type="Animation" id=42]
resource_name = "aparecer"
tracks/0/type = "value"
tracks/0/path = NodePath(".:custom_styles/normal:bg_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 0, 0, 0 ), Color( 1, 0, 0, 1 ) ]
}

[sub_resource type="Animation" id=61]
resource_name = "rgdsc"
length = 5.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:custom_styles/normal:bg_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.61378, 1.4833, 2.19207, 2.77662, 3.50731, 4.28915, 4.93947 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.878431, 0.0117647, 0.0117647, 1 ), Color( 0.0627451, 0.0117647, 0.878431, 1 ), Color( 0.219608, 0.878431, 0.0117647, 1 ), Color( 0.878431, 0.0117647, 0.741176, 1 ), Color( 0.0117647, 0.878431, 0.760784, 1 ), Color( 0.807843, 0.878431, 0.0117647, 1 ), Color( 0.407843, 0.0117647, 0.878431, 1 ), Color( 0.878431, 0.0117647, 0.0117647, 1 ) ]
}

[sub_resource type="Animation" id=44]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("AudioStreamPlayer:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -80.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:volume_db")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -21.19 ]
}

[sub_resource type="Animation" id=45]
resource_name = "asdf"
tracks/0/type = "value"
tracks/0/path = NodePath("AudioStreamPlayer:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = false
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -80.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:volume_db")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -21.19, 1.0 ]
}

[sub_resource type="DynamicFont" id=46]
size = 42
font_data = ExtResource( 8 )

[sub_resource type="StyleBoxFlat" id=47]
bg_color = Color( 0.0431373, 0.0431373, 0.0431373, 0.615686 )

[sub_resource type="StyleBoxFlat" id=48]
bg_color = Color( 0.847059, 0.890196, 0.0862745, 0 )

[sub_resource type="StyleBoxFlat" id=49]
bg_color = Color( 0.878431, 0.0117647, 0.0117647, 1 )

[sub_resource type="DynamicFont" id=65]
size = 30
font_data = ExtResource( 8 )

[sub_resource type="StyleBoxFlat" id=62]
bg_color = Color( 0.533333, 0.533333, 0.533333, 0.588235 )

[sub_resource type="StyleBoxFlat" id=63]
bg_color = Color( 1, 1, 1, 1 )
border_color = Color( 1, 1, 0, 0 )

[sub_resource type="StyleBoxFlat" id=64]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="Animation" id=57]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:custom_styles/pressed:border_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:custom_styles/normal:bg_color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0.6, 0.6, 0.6, 0 ) ]
}

[sub_resource type="Animation" id=60]
resource_name = "rgbasfd"
length = 5.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:custom_styles/normal:bg_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.00835, 1.99478, 2.99583, 4.01149, 4.96869 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.87451, 0.866667, 0.458824, 1 ), Color( 0.501961, 0.87451, 0.458824, 1 ), Color( 0.458824, 0.486275, 0.87451, 1 ), Color( 0.87451, 0.458824, 0.811765, 1 ), Color( 0.87451, 0.458824, 0.458824, 1 ), Color( 0.87451, 0.698039, 0.458824, 1 ) ]
}

[sub_resource type="Animation" id=59]
resource_name = "sfgh"
tracks/0/type = "value"
tracks/0/path = NodePath(".:custom_styles/normal:bg_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.979125 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.6, 0.6, 0.6, 0 ), Color( 0.913725, 0.94902, 0.447059, 1 ) ]
}

[node name="Intro" type="Node2D"]
__meta__ = {
"_edit_horizontal_guides_": [ 80.0 ],
"_edit_vertical_guides_": [ 500.0 ]
}

[node name="StaticBody2D" type="StaticBody2D" parent="."]
show_behind_parent = true

[node name="Render" type="Sprite" parent="StaticBody2D"]
show_behind_parent = true
position = Vector2( 513, 299 )
scale = Vector2( 0.532292, 0.551852 )
texture = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 616, 392 )
shape = SubResource( 17 )

[node name="Actor1" type="KinematicBody2D" parent="."]
position = Vector2( -37, 482 )
script = ExtResource( 5 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="Actor1"]
anims/RESET = SubResource( 50 )
anims/camiar = SubResource( 51 )

[node name="caminandointro" type="AnimatedSprite" parent="Actor1"]
visible = false
position = Vector2( -8, 0 )
scale = Vector2( 2, 2 )
frames = SubResource( 9 )
frame = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Actor1"]
show_behind_parent = true
position = Vector2( 5, 5.5 )
shape = SubResource( 10 )

[node name="Area2D" type="Area2D" parent="Actor1"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Actor1/Area2D"]
shape = SubResource( 18 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="Actor1"]
stream = ExtResource( 10 )
volume_db = 1.0

[node name="Sprite" type="Sprite" parent="Actor1"]
scale = Vector2( 2, 2 )
texture = ExtResource( 3 )
hframes = 5

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( 499, 501 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 3, -54 )
shape = SubResource( 11 )

[node name="Trifuerza" type="AnimatedSprite" parent="Area2D"]
scale = Vector2( 1.40625, 1.6875 )
frames = SubResource( 16 )
frame = 3
playing = true

[node name="Trifuerza2" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 499, 387 )
scale = Vector2( 1.40625, 1.6875 )
frames = SubResource( 16 )
frame = 2
playing = true

[node name="Linkintro22" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 493, 478 )
scale = Vector2( 2, 2 )
frames = SubResource( 22 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 495, 477 )
scale = Vector2( 2, 2 )
frames = SubResource( 25 )
playing = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../ColorRect")
anims/Disolve = SubResource( 26 )
anims/RESET = SubResource( 27 )
anims/salir = SubResource( 31 )

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
margin_left = 3.0
margin_right = 1023.0
margin_bottom = 598.0
mouse_filter = 2

[node name="Blue Label de yoni walker" type="Label" parent="."]
visible = false
margin_left = 188.0
margin_top = 214.0
margin_right = 838.0
margin_bottom = 483.0
rect_pivot_offset = Vector2( 314, 50 )
custom_fonts/font = SubResource( 28 )
text = "Blue Label 


"
align = 1

[node name="el del titulo" type="AnimationPlayer" parent="."]
root_node = NodePath("../Blue Label de yoni walker")
anims/Aparicion = SubResource( 29 )
anims/RESET = SubResource( 30 )
anims/musica = SubResource( 43 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 512, 298 )

[node name="lkesgo" type="AnimationPlayer" parent="."]
root_node = NodePath("../ColorRect")
anims/RESET = SubResource( 32 )
anims/dejar = SubResource( 33 )

[node name="asdsdfg" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 34 )
anims/ayyda = SubResource( 35 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -21.19

[node name="delboton" type="AnimationPlayer" parent="."]
root_node = NodePath("../Button")
anims/RESET = SubResource( 40 )
anims/aparecer = SubResource( 42 )
anims/rgb = ExtResource( 11 )
anims/rgdsc = SubResource( 61 )

[node name="muscia" type="AnimationPlayer" parent="."]
root_node = NodePath("../AudioStreamPlayer")
anims/RESET = SubResource( 44 )
anims/asdf = SubResource( 45 )

[node name="Label" type="Label" parent="."]
visible = false
margin_left = 4.0
margin_top = 533.0
margin_right = 302.0
margin_bottom = 615.0
rect_scale = Vector2( 0.5, 0.5 )
text = "*Al clickear en \"jugar\" estas aceptando que todos tus datos personales de este dispositivo sean usados, asi como cualquier dato bancario que se pueda encontrar en tu navegador"
align = 3
valign = 3
autowrap = true

[node name="Button" type="Button" parent="."]
visible = false
margin_left = 395.0
margin_top = 170.0
margin_right = 606.0
margin_bottom = 252.0
custom_fonts/font = SubResource( 46 )
custom_styles/hover = SubResource( 47 )
custom_styles/pressed = SubResource( 48 )
custom_styles/normal = SubResource( 49 )
text = "Jugar"
script = ExtResource( 12 )

[node name="Button3" type="Button" parent="."]
visible = false
margin_left = 420.0
margin_top = 273.0
margin_right = 576.0
margin_bottom = 316.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 65 )
custom_styles/hover = SubResource( 62 )
custom_styles/pressed = SubResource( 63 )
custom_styles/normal = SubResource( 64 )
text = "Salir"
script = ExtResource( 9 )

[node name="boton 2" type="AnimationPlayer" parent="Button3"]
anims/RESET = SubResource( 57 )
anims/rgbasfd = SubResource( 60 )
anims/sfgh = SubResource( 59 )

[connection signal="area_entered" from="Actor1/Area2D" to="Actor1" method="_on_Area2D_area_entered"]
[connection signal="animation_finished" from="Linkintro22" to="Actor1" method="_on_Linkintro22_animation_finished"]
[connection signal="animation_finished" from="AnimationPlayer" to="Actor1" method="_on_AnimationPlayer_animation_finished"]
[connection signal="animation_finished" from="el del titulo" to="Actor1" method="_on_el_del_titulo_animation_finished"]
[connection signal="animation_finished" from="lkesgo" to="Actor1" method="_on_lkesgo_animation_finished"]
[connection signal="animation_finished" from="delboton" to="Actor1" method="_on_delboton_animation_finished"]
[connection signal="pressed" from="Button" to="Button" method="_on_Button_pressed"]
[connection signal="pressed" from="Button3" to="Button3" method="_on_Button3_pressed"]
[connection signal="animation_finished" from="Button3/boton 2" to="Actor1" method="_on_boton_2_animation_finished"]
